chore(sonar): clear the SonarCloud findings on the PR at source
Waiting-list note and date fields carry an id and an accessible label; the
chart script's comments no longer contain tag-shaped text the HTML analyser
reads as elements, and editNote() escapes the payload as its own statement
so the legacy textarea markup line is untouched. The row-selector pattern
uses \d; the modifier order on loadMeasurementTypes() follows the JLS.

The two WAF mirror tests drop the backtracking regexes: the ctl-line pattern
names the exact character class of a literal target, and the tag pattern
(in the generator too, kept identical) makes its alternatives mutually
exclusive, with the encoder-tag alternative now aware of a scriptlet inside
it, so it matches the same tags whole instead of truncated. The generated
exclusion file is byte-for-byte unchanged. Stream.toList() replaces
collect(), and the conditional group() index moves inside the call.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Y7kUsoTMUWaj1fkL4ejRrZ